src/test/deca/syntax/invalid/created/wrong_order_in_bloc/decl_after_inst.deca
// Description:
//      Assign apres une instruction
// Resultats :
//      Error Ligne 12 : no viable alternative at input 'c'

{
    int a;
    int b = 8;

    a = b;

    int c = 7;
}